--- a/SSD1306/SSD1306-Sharp.csproj
+++ b/SSD1306/SSD1306-Sharp.csproj
@@ -1,72 +1,34 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\packages\NuGet.Build.Packaging.0.2.2\build\NuGet.Build.Packaging.props" Condition="Exists('..\packages\NuGet.Build.Packaging.0.2.2\build\NuGet.Build.Packaging.props')" />
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <ProjectGuid>{08E0FC2B-ABF5-4C46-AF18-D14B0A35949D}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <RootNamespace>SSD1306</RootNamespace>
-    <AssemblyName>SSD1306</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-    <PackOnBuild>true</PackOnBuild>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <RootNamespace>SSD1306_Standard</RootNamespace>
+    <Copyright>TFA Labs</Copyright>
     <PackageId>SSD1306-Sharp</PackageId>
-    <PackageVersion>0.4</PackageVersion>
     <Authors>TFA Labs</Authors>
-    <PackageLicenseUrl>https://github.com/iot-sas/SSD1306-Sharp/blob/master/LICENSE</PackageLicenseUrl>
-    <Owners>TFA Labs</Owners>
+    <Product>SSD1306-Sharp</Product>
+    <PackageLicenseExpression>https://github.com/iot-sas/SSD1306-Sharp/blob/master/LICENSE</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/iot-sas/SSD1306-Sharp</PackageProjectUrl>
-    <Summary>Simple SSD1306 Display Driver</Summary>
-    <Title>SSD1306-Sharp</Title>
-    <Description>Simple SSD1306 Text Display Driver for Linux &amp; Meadow</Description>
+    <RepositoryUrl>https://github.com/iot-sas/SSD1306-Sharp</RepositoryUrl>
+    <Description>Simple SSD1306 Display Driver</Description>
+    <Version>0.5</Version>
+    <Company>TFA Labs</Company>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
-    <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;</DefineConstants>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <DebugType>full</DebugType>
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <LangVersion>7.3</LangVersion>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
-    <OutputPath>bin\Release\</OutputPath>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <Optimize>true</Optimize>
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <LangVersion>7.3</LangVersion>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="Mono.Posix">
-      <HintPath>..\packages\Mono.Posix-4.5.4.5.0\lib\net45\Mono.Posix.dll</HintPath>
-    </Reference>
+    <Compile Remove="Fonts\FontTemplate.cs" />
   </ItemGroup>
+
   <ItemGroup>
-    <Compile Include="I2C\II2CDevice.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Fonts\FontInfo.cs" />
-    <Compile Include="Fonts\IFont.cs" />
-    <Compile Include="Fonts\Tahmona10.cs" />
-    <Compile Include="Fonts\Tahmona12.cs" />
-    <Compile Include="Fonts\Tahmona14.cs" />
-    <Compile Include="Fonts\DinerRegular24.cs" />
-    <Compile Include="Fonts\MakeFont.cs" />
-    <Compile Include="Fonts\Tahmona8.cs" />
-    <Compile Include="Display.cs" />
-    <Compile Include="I2C\I2C-PI\I2CBusPI.cs" />
-    <Compile Include="I2C\I2C-PI\I2CDevicePI.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
     <None Include="Fonts\FontTemplate.cs" />
-    <None Include="Fonts\TheDotNetFactory_Settings.png" />
   </ItemGroup>
-  <ItemGroup />
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\packages\NuGet.Build.Packaging.0.2.2\build\NuGet.Build.Packaging.targets" Condition="Exists('..\packages\NuGet.Build.Packaging.0.2.2\build\NuGet.Build.Packaging.targets')" />
+
+  <ItemGroup>
+    <PackageReference Include="Mono.Posix.NETStandard" Version="1.0.0" />
+  </ItemGroup>
+
 </Project>
