Added drawing of lines and polygons.

--- a/SSD1306/SSD1306-Sharp.csproj
+++ b/SSD1306/SSD1306-Sharp.csproj
@@ -29,6 +29,7 @@
 
   <ItemGroup>
     <PackageReference Include="Mono.Posix.NETStandard" Version="1.0.0" />
+    <PackageReference Include="System.Numerics.Vectors" Version="4.5.0" />
   </ItemGroup>
 
 </Project>
